ajout tarif_tailwindcss

--- a/Test.html
+++ b/Test.html
@@ -176,7 +176,7 @@
         <div class="formulaire">
             <img src="canada.png" alt="">
             <form action="">
-                <input type="text" placeholder="Nom-utilisateur" required>
+                <input type="text" name="username" id="username" placeholder="Nom-utilisateur" required>
                 <input type="password" placeholder="Mot de passe" name="mot de passe" required>
                 <div class="checkbox">
                     <input type="checkbox" id="checkbox">
