--- a/formt.html
+++ b/formt.html
@@ -26,37 +26,54 @@
 <body class="bg-gray-200 flex content-center justify-center h-full items-center ">
     <div class="bg-white shadow-lg max-w-lg md:flex w-full opacity-4">
         <img class="flex-1 w-60 h-30 md:h-full object-cover" src="Capture d’écran_21-12-2024_62634_login.formation-tcfcanada.com.jpeg" alt="une image">
-        <div class="p-2 flex-1 md:flex md:flex-col justify-center items-center w-60 m-0" >
+        <form class="p-2 flex-1 md:flex md:flex-col justify-center items-center w-60 m-0" >
             <div class="flex w-full h-90  m-20px gap-0 p-0 mb-4">
                 <button class=" bg-slate-300 text-center px-4 py-2 w-40"><a href="#" class="no-underline ">se connecter</a></button>
                 <button class="bg-sky-500 text-white px-4 py-2 w-40 "><a href="#" class="no-underline">s'inscrire</a></button>
             </div>
-            <div class="flex border-solid mb-4 w-full">
+            <div class="flex border-solid mb-4 w-full" id="myform">
                <div class="text-2xl text-center w-10 items-center border  bg-slate-300 text-black"> <i class="fas fa-user-plus" ></i></div>
-                <input type="text" placeholder="Nom d'utilisateur" class="border shadow-inner py-2 px-3 text-gray-700 w-full focus:shadow-outline">
+                <input type="text" placeholder="Nom d'utilisateur" name="nom"required  class="border shadow-inner py-2 px-3 text-gray-700 w-full focus:shadow-outline">
             </div>
             <div class="flex border-solid mb-4 w-full">
                 <div class="text-2xl w-10 text-center justify-center items-center border shadow-inner bg-slate-300"><i class="fas fa-envelope"></i></div>
-                 <input type="Email" placeholder="Email" class="border shadow-inner py-2 px-3 text-gray-700 w-full focus:shadow-outline">
+                 <input type="Email" placeholder="Email" name="email"required class="border shadow-inner py-2 px-3 text-gray-700 w-full focus:shadow-outline">
             </div>
             <div class="flex border-solid mb-4 w-full">
                 <div class="text-2xl w-10 text-center justify-center items-center border shadow-inner bg-slate-300"><i class="fas fa-user"></i></div>
-                 <input type="text" placeholder="Nom_complet" class="border shadow-inner py-2 px-3 text-gray-700 w-full focus:shadow-outline">
+                <input type="text" placeholder="Nom_complet" id="username" name="nom"required   class="border shadow-inner py-2 px-3 text-gray-700 w-full focus:shadow-outline">
+                <span id="error"></span>
             </div>
             <div class="flex border-solid mb-4 w-full">
                 <div class="text-2xl w-10 text-center justify-center items-center border shadow-inner bg-slate-300"> <i class="fas fa-phone"></i></div>
-                 <input type="text" placeholder="Numero de telephone" class="border shadow-inner py-2 px-3 text-gray-700 w-full focus:shadow-outline">
+                 <input type="text" placeholder="Numero de telephone" id="username"  class="border shadow-inner py-2 px-3 text-gray-700 w-full focus:shadow-outline" name="numero"required>
             </div>
             <div class="flex border-solid mb-4 w-full">
                 <div class="text-2xl w-10 text-center justify-center items-center border shadow-inner bg-slate-300"><i class="fas fa-lock"></i></div>
                  <input type="mot de passe" placeholder="Mot de passe" name="mot de passe"required class="border shadow-inner py-2 px-3 text-gray-700 w-full focus:shadow-outline">
                  <div class="w-10 px-2 py-2 text-sm w-10 text-center justify-center items-center border shadow-inner "><i class="fas fa-eye"></i></div>
             </div>
-            <button class="bg-blue-500 rounded-xl w-full text-white transition duration-150 ease-out hover:ease-in"><a href="#">S'INSCRIRE</a><i class="fas fa-sign-in-alt" class="text-white"></i></button>
-        </div>
+            <button class="bg-blue-500 rounded-xl w-full text-white transition duration-150 ease-out hover:ease-in" type="submit"><a href="#">S'INSCRIRE</a><i class="fas fa-sign-in-alt" class="text-white"></i></button>
+        </form>
     </div>
     <script>
-
+        let myform=document.getElementById('myform');
+        let myinput=document.getElementById('username');
+        myform.addEventListener('submit',function(e){
+            let myinput=document.getElementById('username');
+            let myregex=/^[a-zA-Z\s-]+$/ ;
+            if(myinput.value.trim()==""){
+                let myerror= document.getElementById('error');
+                myerror.innerHTML="le camp est requis";
+                myerror.style.color='red';
+                e.preventDefault();
+            }else if(myregex.test(myinput.value)==false){
+                let myerror= document.getElementById('error');
+                myerror.innerHTML="le camp est requis";
+                myerror.style.color='red';
+                e.preventDefault();
+            }
+        });
     </script>
 </body>
 </html>
