--- a/Tarif.html
+++ b/Tarif.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="Tarif.css">
-    <link href="./output.css" rel="stylesheet">
+    <link href="output.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
